# simul_furuta

./: .gitignore  CMakeLists.txt  FindAllegro.cmake  README.md
MATLAB/codegen/: codegen_init.m  fast.slx  slow.slx
MATLAB/drawings/: drawings.m
MATLAB/dynamics/: dynamics.m  f_red.m
MATLAB/simulation/: A_red.m  simulation.slx  simulation_init.m
Relazione_tex/: formule.tex  interfaccia.tex  main.tex  resource.tex  structure.tex  task.tex
include/: condiviso.h  controller.h  defines.h  disturbance_and_noise.h  gui.h  gui_init.h  keys.h  main.h  os.h.in  physic.h  physics.h  ptask.h  rt_zcfcn.h  shared.h  simulation.h  types.h
src/: condiviso.c  controller.c  disturbance_and_noise.c  gui.c  gui_init.c  keys.c  main.c  physic.c  physics.c  pippo.c  ptask.c  simulation.c
